# uartbinlib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
assets/: uartbinlib_doxygen.css
docs/: index.html
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  api__usage_8md.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_da365f69fd92fba590466b428516f2c8.html  doxygen_crawl.html  examples.html  examples.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  guide_api_usage.html  guide_linux_usage.html  guide_porting.html  guide_ring_buffer.html  guide_stm32_transport.html  index.html  linux__posix__serial_8c.html  linux__posix__serial_8c.js  linux__posix__serial_8c_source.html  linux__usage_8md.html  linux_posix_serial_8c-example.html  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  (+31 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  (+63 more)
examples/: linux_posix_serial.c  stm32_hal_dma_idle.c  stm32_hal_interrupt.c
guides/: api_usage.md  linux_usage.md  porting.md  ring_buffer_port.md  stm32_transport.md
include/: uartbin.h
src/: uartbin.c
tests/: test_uartbin.c
